--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
+.idea
+
 # Ignore configuration files that may contain sensitive information.
-sites/*/*settings*.php
+sites/default/settings.php
 
 # Ignore paths that contain generated content.
 files/
-sites/*/files
-sites/*/private
+#sites/*/files
+#sites/*/private
 
 # Ignore modules and themes. They come from seperate repo.
-sites/all/*
+
